# mock_test

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  server.py
src/pyexam/: cli.py
src/pyexam/data/: index.html
