[project]
name = "pyexam-mock"
version = "0.1.1"
description = "Timed Python mock tests with line-by-line AI feedback"
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
dependencies = []

[project.scripts]
pyexam = "pyexam.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyexam"]
